--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                         
                     <div class="site-header--finder">
                         <button class="site-header--button" type="button">Rechercher</button>
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                 
                 </div>
