--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
                 </div>
 
                 <div class="site-header--info">
-                    <i class="fa-solid fa-circle-info"></i>
+                    <div class="site-header--info-icon">
+                        <span class="site-header--icon">i</span>
+                    </div>
                     <span class="site-header--text-info">Plus de 500 logements sont disponibles dans cette ville</span>
                 </div>
             </div>
