--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=""fr>
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -250,7 +250,7 @@
             
             <section class="container">
 
-                <article class="site-content--col-activity-">
+                <article class="site-content--col-activity">
                     <div>
                         <h1 class="site-content--activity-title">Activités à Marseille</h1>
                     </div>
