--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <button class="site-header--button" type="submit">
                     <span>Rechercher</span>
                 </button>
+                <button class="site-header--magnifying-glass" type="submit">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
             </div>
         </form>
 
@@ -113,7 +116,7 @@
                 <span class="ico-info">
                     <i class="fa-solid fa-info"></i>
                 </span>
-                <span class="text-info">Plus de 500 logements disponibles</span>
+                <span class="text-info">Plus de 500 logements disponibles dans cette ville</span>
             </div>
 
         </header>
