--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-    <!---------------------------- Site HEADER ---------------------------->
+    <!-- ******************************* Site HEADER ************************** -->
     <header class="container">
 
-        <!---------------- Site Header - TOPBAR / MENU -------------------->
+        <!-- ******************** Site Header - TOPBAR / MENU ********************* -->
 
         <div class="site-header--topbar">
             <h1 class="site-header--topbar-title">
@@ -26,72 +26,70 @@
                 <span hidden>Booki</span>
             </h1>
             <nav class="site-header--topbar-menu">
-                <a class="site-header--topbar-link" href="#">Hébergements</a>
-                <a class="site-header--topbar-link" href="#">Activités</a>
+                <a class="site-header--topbar-link" href="#rent">Hébergements</a>
+                <a class="site-header--topbar-link" href="#activity">Activités</a>
             </nav>
         </div>
 
-        <!----------------- Site Header - SEARCH-GROUP -------------------------->
+        <!--********************* Site Header - SEARCH-GROUP ********************** -->
 
         <div class="site-header--search-headline">
             <span class="site-header--search-title">Trouver votre hébergement pour des vacances de rêve</span><br>
-            <span>En plein centre ville ou en pleine nature</span>
+            <span class="text-info">En plein centre ville ou en pleine nature</span>
         </div>
 
-        <!----------------- Site Header - SEARCH-BAR --------------------------->
+        <!-- ********************* Site Header - SEARCH-BAR *********************** -->
 
-        <form>
-            <div class="site-header--search-form">
-                <div class="site-header--fa-location">
+        <form class="site-header--search-form">
+            <div class="site-header--fa-location">
                     <i class="fa-solid fa-location-dot"></i>
-                </div>
-
-                <label for="search" hidden>Recherche</label>
-                <input type="search" id="search" name="search" placeholder="Rechercher une ville">
-
-                <button class="site-header--button" type="submit">
-                    <span>Rechercher</span>
-                </button>
-                <button class="site-header--magnifying-glass" type="submit">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </button>
             </div>
+
+            <label for="search" hidden>Recherche</label>
+            <input type="search" id="search" name="search" placeholder="Rechercher une ville">
+
+            <button class="site-header--button" type="submit">
+                <span>Rechercher</span>
+            </button>
+            <button class="site-header--magnifying-glass" type="submit">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
         </form>
 
-        <!------------------ Site Header - FILTERS -------------------------->
+        <!-- ********************* Site Header - FILTERS *************************** -->
 
-        <!------------------ Site Header - Filters-TITLE --------------------->
+        <!-- ********************* Site Header - Filters-TITLE ********************* -->
 
         <div class="site-header--filters">
 
-            <h3 class="site-header--filters-title">Filtres</h3>
+            <div class="site-header--filters-title">Filtres</div>
 
-            <!------------------ Site Header - Filters-TAGS --------------------->
+            <!-- ********************* Site Header - Filters-TAGS ********************* -->
 
             <div class="site-header--filters-all-tags">
 
-                <!------------------ Site Header - TAG : ECONOMY --------------->
+                <!-- ******************** Site Header - TAG : ECONOMY ********************** -->
 
                 <a class="site-header--filters-tag" href="#">
                     <i class="fa-solid fa-money-bill-wave"></i>
                     <span class="site-header--filters-tag-name">Économique</span>
                 </a>
 
-                <!------------------ Site Header - TAG : FAMILY--------------->
+                <!-- ********************* Site Header - TAG : FAMILY ********************* -->
 
                 <a class="site-header--filters-tag" href="#">
                     <i class="fa-solid fa-person"></i>
                     <span class="site-header--filters-tag-name">Familial</span>
                 </a>
 
-                <!------------------ Site Header - TAG : ROMANTIC --------------->
+                <!-- ********************* Site Header - TAG : ROMANTIC ******************* -->
 
                 <a class="site-header--filters-tag" href="#">
                     <i class="fa-solid fa-heart"></i>
                     <span class="site-header--filters-tag-name">Romantique</span>
                 </a>
 
-                <!--------------- Site Header - TAG : BEST DEALS ------------->
+                <!-- ********************* Site Header - TAG : BEST DEALS ********************* -->
 
 
                 <a class="site-header--filters-tag" href="#">
@@ -102,15 +100,15 @@
         </div>
     </header>
 
-    <!---------------------- Site Section - MAIN CONTENT ------------------------>
+    <!-- ****************************************** Site Section - MAIN CONTENT ********************** -->
 
     <section class="container">
 
-        <!---------------------- Site Section - HEADER ------------------------->
+        <!-- ************************************** Site Section - HEADER **************************** -->
 
         <header class="section-header">
 
-            <!------------------ Site Section- Header-INFO --------------------->
+            <!-- ********************************** Site Section- Header-INFO ************************ -->
 
             <div class="section-header--info">
                 <span class="ico-info">
@@ -121,23 +119,23 @@
 
         </header>
 
-        <!----------------------- Site Section - CONTENT ------------------------>
+        <!-- ************************************* Site Section - CONTENT ***************************** -->
 
         <div class="section-content">
 
-            <!----------------------- Site Section - OFFERS --------------------->
+            <!-- ******************************** Site Section - OFFERS ******************************* -->
 
             <div class="section-content--offers">
 
-                <!------------------ Site Section - Offers TITLE ---------------->
+                <!-- **************************** Site Section - Offers TITLE ************************** -->
 
-                <h2 class="section-offers-title">Hébergements à Marseille</h2>
+                <h2 id="rent" class="section-offers-title">Hébergements à Marseille</h2>
 
-                <!------------------- Site Section - Offers CARDS --------------->
+                <!-- **************************** Site Section - Offers CARDS *************************** -->
 
                 <div class="section-offers-cards">
 
-                    <!---------------Site Section - Cards : Hôtel du port ------->
+                    <!-- ************************ Site Section - Cards : Hôtel du port ******************* -->
 
                     <a href="#" class="article">
                         <article class="card">
@@ -153,7 +151,7 @@
                         </article>
                     </a>
 
-                    <!--------- Site Section - Cards : Hôtel Chez Amina --------->
+                    <!-- *********************** Site Section - Cards : Hôtel Chez Amina **************** -->
 
                     <a href="#" class="article">
                         <article class="card">
@@ -169,7 +167,7 @@
                         </article>
                     </a>
 
-                    <!---------- Site Section - Cards : Hôtel Les mouettes ------>
+                    <!-- *********************** Site Section - Cards : Hôtel Les mouettes *************** -->
 
                     <a href="#" class="article">
                         <article class="card">
@@ -185,7 +183,7 @@
                         </article>
                     </a>
 
-                    <!-------------- Site Section - Cards : Hôtel de la mer ---------->
+                    <!-- ********************** Site Section - Cards : Hôtel de la mer ********************* -->
 
                     <a href="#" class="article">
                         <article class="card">
@@ -201,7 +199,7 @@
                         </article>
                     </a>
 
-                    <!-------------- Site Section - Cards : Auberge La Canebière ------>
+                    <!-- ********************* Site Section - Cards : Auberge La Canebière ***************** -->
 
                     <a href="#" class="article">
                         <article class="card">
@@ -218,7 +216,7 @@
                         </article>
                     </a>
 
-                    <!-------------- Site Section - Cards : Auberge Le Panier ------>
+                    <!-- ********************* Site Section - Cards : Auberge Le Panier ********************* -->
 
                     <a href="#" class="article">
                         <article class="card">
@@ -234,20 +232,20 @@
                         </article>
                     </a>
                 </div>
-                <!----------------- Site Section - Offers FOOTER ----------------->
+                <!-- ********************************* Site Section - Offers FOOTER ************************** -->
 
                 <footer class="section-footer">
                     <a class="footer-link" href="#">Afficher plus</a>
                 </footer>
             </div>
 
-            <!------------------- Site Section - SPONSORED ---------------------->
+            <!-- ************************************* Site Section - SPONSORED ****************************** -->
 
             <div class="section-content--sponsored">
 
 
 
-                <!------------------ Site Section - Sponsored TITLE ------------->
+                <!-- ********************************* Site Section - Sponsored TITLE ************************ -->
                 <div class="section-sponsored-title">
                     <h2 class="sponsored-title">Les Plus populaires</h2>
                     <span><i class="fa-solid fa-chart-line"></i></span>
@@ -255,14 +253,14 @@
 
 
 
-                <!------------------- Site Section - Sponsored CARDS ------------>
+                <!-- ********************************* Site Section - Sponsored CARDS ************************ -->
 
 
                 <div class="section-sponsored-cards">
 
-                    <!---- Site Section - Cards : Hôtel Le soleil du matin ------>
+                    <!-- ****************** Site Section - Cards : Hôtel Le soleil du matin ****************** -->
 
-                    <a href="#" class="article">
+                    <a href="#" class="col-article">
                         <article class="col-card">
                             <img class="col-pic" src="images/hebergements/emile-guillemot.jpg"
                                 title="Hôtel Le soleil du matin"
@@ -280,9 +278,9 @@
                         </article>
                     </a>
 
-                    <!--  Site Section - Cards : Chambres d'hôtes Au coeur de l'eau -->
+                    <!-- ************** Site Section - Cards : Chambres d'hôtes Au coeur de l'eau ************* -->
 
-                    <a href="#" class="article">
+                    <a href="#" class="col-article">
                         <article class="col-card">
                             <img class="col-pic" src="images/hebergements/aw-creative.jpg"
                                 title="Chambres d'hôtes Au coeur de l'eau"
@@ -300,9 +298,9 @@
                         </article>
                     </a>
 
-                    <!----------- Site Section - Cards : Hôtel Les mouettes --------->
+                    <!-- ************************ Site Section - Cards : Hôtel Les mouettes ********************* -->
 
-                    <a href="#" class="article">
+                    <a href="#" class="col-article">
                         <article class="col-card">
                             <img class="col-pic" src="images/hebergements/reisetopia.jpg" title="Hôtel Bleu et Blanc"
                                 alt="Chambre avec un lit double, une tablette et des appliques murales, ainsi qu'un placard aux portes coulissantes habillées de miroirs">
@@ -322,18 +320,18 @@
             </div>
         </div>
     </section>
-    <!---------------------- Site Section - ACTIVITY ---------------------------->
+                    <!-- *********************************** Site Section - ACTIVITY ****************************** -->
 
     <section class="container">
 
-        <!----------------- Site Section - Activity - TITLE --------------------->
+                    <!-- ******************************* Site Section - Activity - TITLE ************************** -->
 
         <div class="section-activity-content">
             <div class="section-activity-headline">
-                <h2 class="section-activity-title">Activités à Marseille</h2>
+                <h2 id="activity" class="section-activity-title">Activités à Marseille</h2>
             </div>
 
-            <!----------------- Site Section - Activity - CARDS ------------------>
+                    <!-- ******************************** Site Section - Activity - CARDS ************************** -->
 
             <div class="section-activity-cards">
                 <a href="#" class="activity-article">
@@ -377,18 +375,18 @@
             </div>
         </div>
     </section>
-    <!-------------------------------- Site FOOTER ------------------------------>
+                    <!-- ************************************** Site FOOTER ************************************ -->
     <footer class="container">
 
-        <!------------------------- Site Footer - CONTENT ------------------------>
+                    <!-- ******************************* Site Footer - CONTENT ********************************* -->
 
         <div class="footer-content">
 
-            <!------------------------- -Site Footer - MENU----------------------->
+                    <!-- ********************************* Site Footer - MENU ********************************** -->
 
             <nav class="footer-menu">
 
-                <!------------------------- Site Footer - LIST------------------------>
+                <!-- ************************************** Site Footer - LIST ********************************* -->
 
                 <div class="footer-menu--list">
                     <span class="footer-menu--title">A propos</span>
@@ -397,7 +395,7 @@
                     <a class="footer-menu--link" href="#">Données et confidentialité</a>
                 </div>
 
-                <!------------------------- Site Footer - LIST------------------------>
+                <!-- ************************************* Site Footer - LIST ********************************** -->
 
                 <div class="footer-menu--list">
                     <span class="footer-menu--title">Nos hébergements</span>
@@ -405,7 +403,7 @@
                     <a class="footer-menu--link" href="#">Proposer votre hôtel</a>
                 </div>
 
-                <!------------------------- Site Footer - LIST------------------------>
+                <!-- ************************************* Site Footer - LIST ********************************** -->
 
                 <div class="footer-menu--list">
                     <span class="footer-menu--title">Assistance</span>
