--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
                 <!-- ********************************* Site Section - Sponsored TITLE ************************ -->
                 <div class="section-sponsored-title">
-                    <h2 class="sponsored-title">Les Plus populaires</h2>
+                    <h2 class="sponsored-title">Les plus populaires</h2>
                     <span><i class="fa-solid fa-chart-line"></i></span>
                 </div>
 
