--- a/index.html
+++ b/index.html
@@ -104,15 +104,6 @@
                         </a>
                     </div>
                 </div>
-
-                <!--  Site Header - FILTERS - INFO  -->
-
-                <div class="offers--info">
-                    <span class="ico-info">
-                        <i class="fa-solid fa-info"></i>
-                    </span>
-                    <span class="text-info">Plus de 500 logements disponibles dans cette ville</span>
-                </div>
             </div>
         </header>
     </div>
@@ -124,6 +115,15 @@
     <div class="container">
         <main class="site-content-main">
 
+            <!--  Site Main Content - INFO  -->
+
+            <div class="offers--info">
+                <span class="ico-info">
+                    <i class="fa-solid fa-info"></i>
+                </span>
+                <span class="text-info">Plus de 500 logements disponibles dans cette ville</span>
+            </div>
+
             <!--  Site Main Content - ALL  -->
 
             <div class="site-content--all">
@@ -131,6 +131,7 @@
                 <!--  Site Main Content - OFFERS  -->
 
                 <div class="site-content--offers">
+                    
 
                     <!--  Site Main Content - OFFERS-GROUP  -->
 
