--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
                     <section class="offers--group">
                         <div class="offers--headline">
-                            <h2 class="headline--title">Hébergement à Marseille</h2>
+                            <h2 id="rent" class="headline--title">Hébergement à Marseille</h2>
                         </div>
 
                         <!--  Site Main Content - OFFERS-CARDS  -->
@@ -315,7 +315,7 @@
 
                     <section class="activity--group">
                         <div class="activity--headline">
-                            <h2 class="headline--title">Activité à Marseille</h2>
+                            <h2 id="activity" class="headline--title">Activité à Marseille</h2>
                         </div>
 
                         <!--  Site Main Content - ACTIVITY -CARDS  -->
