--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <label for="search" hidden>Recherche</label>
                     <input type="search" id="search" name="search" placeholder="Rechercher une ville">
-                    
+
                     <!-- Site Header - SEARCH-BUTTON -->
                     <button class="site-header--button" type="submit">
                         <span>Rechercher</span>
@@ -129,134 +129,134 @@
 
                     <!-- Site Main Content - OFFERS-GROUP -->
                     <section class="offers--group">
-                        <!-- Site Main Content - OFFERS--HEADLINE -->
+                        <!-- Site Main Content - OFFERS HEADLINE -->
                         <div class="offers--headline">
-                            <!-- Site Main Content - HEADLINE--TITLE -->
+                            <!-- Site Main Content - HEADLINE TITLE -->
                             <h2 id="rent" class="offers-headline--title">Hébergement à Marseille</h2>
                         </div>
 
-                        <!-- Site Main Content - OFFERS--ALL-CARDS -->
+                        <!-- Site Main Content - OFFERS ALL CARDS -->
                         <div class="offers--all-cards">
-                            <!-- Site Main Content - OFFERS--LINK -->
+                            <!-- Site Main Content - OFFERS LINK -->
                             <a href="#" class="offers--link">
-                                <!-- Site Main Content - OFFERS--CARDS -->
+                                <!-- Site Main Content - OFFERS CARDS -->
                                 <article class="offers-card">
-                                    <!-- Site Main Content - OFFERS--CARD-PIC -->
+                                    <!-- Site Main Content - OFFERS CARD-PIC -->
                                     <img class="card-pic" src="images/hebergements/fred-kleber.jpg"
                                         title="Hôtel du port"
                                         alt="Chambre lumineuse aux murs gris clair, fenêtre et voiles blancs, deux lits simples habillés de draps marrons, avec des coussins de décoration au style industriel">
-                                        <!-- Site Main Content - OFFERS--CARD-INFO -->
+                                    <!-- Site Main Content - OFFERS CARD-INFO -->
                                     <div class="card-info">
-                                        <!-- Site Main Content - OFFERS--CARD-TITLE -->
+                                        <!-- Site Main Content - OFFERS CARD-TITLE -->
                                         <h3 class="card-title">Hôtel du port</h3>
-                                        <!-- Site Main Content - OFFERS--CARD-PRICE -->
+                                        <!-- Site Main Content - OFFERS CARD-PRICE -->
                                         <span class="card-price">Nuit à partir de <strong>52&euro;</strong></span>
-                                        <!-- Site Main Content - OFFERS--CARD-ICONS -->
+                                        <!-- Site Main Content - OFFERS CARD-ICONS -->
                                         <span class="card-icons">
                                             <i class="fa-solid fa-star"></i>
                                         </span>
                                     </div>
                                 </article>
                             </a>
-                            <!-- Site Main Content - OFFERS--LINK -->
+                            <!-- Site Main Content - OFFERS LINK -->
                             <a href="#" class="offers--link">
-                                <!-- Site Main Content - OFFERS--CARDS -->
+                                <!-- Site Main Content - OFFERS CARDS -->
                                 <article class="offers-card">
-                                    <!-- Site Main Content - OFFERS--CARD-PIC -->
+                                    <!-- Site Main Content - OFFERS CARD PIC -->
                                     <img class="card-pic" src="images/hebergements/febrian-zakaria.jpg"
                                         title="Hôtel Chez Amina"
                                         alt="Chambre lumineuse avec un lit simple aux draps blancs, avec fenêtre et un bureau équipé d'une lampe, surplombé par une télévision murale">
-                                        <!-- Site Main Content - OFFERS--CARD-INFO -->
+                                    <!-- Site Main Content - OFFERS CARD INFO -->
                                     <div class="card-info">
-                                        <!-- Site Main Content - OFFERS--CARD-TITLE -->
+                                        <!-- Site Main Content - OFFERS CARD TITLE -->
                                         <h3 class="card-title">Hôtel Chez Amina</h3>
-                                        <!-- Site Main Content - OFFERS--CARD-PRICE -->
+                                        <!-- Site Main Content - OFFERS CARD PRICE -->
                                         <span class="card-price">Nuit à partir de <strong>96&euro;</strong></span>
-                                        <!-- Site Main Content - OFFERS--CARD-ICONS -->
+                                        <!-- Site Main Content - OFFERS CARD ICONS -->
                                         <span class="card-icons">
                                             <i class="fa-solid fa-star"></i>
                                         </span>
                                     </div>
                                 </article>
                             </a>
-                            <!-- Site Main Content - OFFERS--LINK -->
+                            <!-- Site Main Content - OFFERS LINK -->
                             <a href="#" class="offers--link">
-                                <!-- Site Main Content - OFFERS--CARDS -->
+                                <!-- Site Main Content - OFFERS CARDS -->
                                 <article class="offers-card">
-                                    <!-- Site Main Content - OFFERS--CARD-PIC -->
+                                    <!-- Site Main Content - OFFERS CARD PIC -->
                                     <img class="card-pic" src="images/hebergements/reisetopia.jpg"
                                         title="Hôtel Les mouettes"
                                         alt="Chambre avec un lit double, une tablette et des appliques murales, ainsi qu'un placard aux portes coulissantes habillées de miroirs">
-                                        <!-- Site Main Content - OFFERS--CARD-INFO -->
+                                    <!-- Site Main Content - OFFERS CARD INFO -->
                                     <div class="card-info">
-                                        <!-- Site Main Content - OFFERS--CARD-TITLE  -->
+                                        <!-- Site Main Content - OFFERS CARD TITLE  -->
                                         <h3 class="card-title">Hôtel Les mouettes</h3>
-                                        <!-- Site Main Content - OFFERS--CARD-PRICE -->
+                                        <!-- Site Main Content - OFFERS CARD PRICE -->
                                         <span class="card-price">Nuit à partir de <strong>76&euro;</strong></span>
-                                        <!-- Site Main Content - OFFERS--CARD-ICONS -->
+                                        <!-- Site Main Content - OFFERS CARD ICONS -->
                                         <span class="card-icons">
                                             <i class="fa-solid fa-star"></i>
                                         </span>
                                     </div>
                                 </article>
                             </a>
-                            <!-- Site Main Content - OFFERS--LINK -->
+                            <!-- Site Main Content - OFFERS LINK -->
                             <a href="#" class="offers--link">
-                                <!-- Site Main Content - OFFERS--CARDS -->
+                                <!-- Site Main Content - OFFERS CARDS -->
                                 <article class="offers-card">
-                                    <!-- Site Main Content - OFFERS--CARD-PIC -->
+                                    <!-- Site Main Content - OFFERS CARD PIC -->
                                     <img class="card-pic" src="images/hebergements/annie-spratt.jpg"
                                         title="Hôtel de la mer"
                                         alt="Chambre lumineuse avec un lit double encadré par deux tables de chevet avec lampes, surmonté d'un grand tableau représentant la mer">
-                                        <!-- Site Main Content - OFFERS--CARD-INFO -->
+                                    <!-- Site Main Content - OFFERS CARD INFO -->
                                     <div class="card-info">
-                                        <!-- Site Main Content - OFFERS--CARD-TITLE  -->
+                                        <!-- Site Main Content - OFFERS CARD TITLE  -->
                                         <h3 class="card-title">Hôtel de la mer</h3>
-                                        <!-- Site Main Content - OFFERS--CARD-PRICE -->
+                                        <!-- Site Main Content - OFFERS CARD PRICE -->
                                         <span class="card-price">Nuit à partir de <strong>46&euro;</strong></span>
-                                        <!-- Site Main Content - OFFERS--CARD-ICONS -->
+                                        <!-- Site Main Content - OFFERS CARD ICONS -->
                                         <span class="card-icons">
                                             <i class="fa-solid fa-star"></i>
                                         </span>
                                     </div>
                                 </article>
                             </a>
-                            <!-- Site Main Content - OFFERS--LINK -->
+                            <!-- Site Main Content - OFFERS LINK -->
                             <a href="#" class="offers--link">
-                                <!-- Site Main Content - OFFERS--CARDS -->
+                                <!-- Site Main Content - OFFERS CARDS -->
                                 <article class="offers-card">
-                                    <!-- Site Main Content - OFFERS--CARD-PIC -->
+                                    <!-- Site Main Content - OFFERS CARD PIC -->
                                     <img class="card-pic" src="images/hebergements/marcus-loke.jpg"
                                         title="Auberge de La Canebière"
                                         alt="Chambres en centre ville avec deux lits superposés et fenêtres donnant sur la rue">
-                                        <!-- Site Main Content - OFFERS--CARD-INFO -->
+                                    <!-- Site Main Content - OFFERS CARD INFO -->
                                     <div class="card-info">
-                                        <!-- Site Main Content - OFFERS--CARD-TITLE -->
+                                        <!-- Site Main Content - OFFERS CARD TITLE -->
                                         <h3 class="card-title">Auberge La Canebière</h3>
-                                        <!-- Site Main Content - OFFERS--CARD-PRICE -->
+                                        <!-- Site Main Content - OFFERS CARD PRICE -->
                                         <span class="card-price">Nuit à partir de <strong>25&euro;</strong></span>
-                                        <!-- Site Main Content - OFFERS--CARD-ICONS -->
+                                        <!-- Site Main Content - OFFERS CARD ICONS -->
                                         <span class="card-icons">
                                             <i class="fa-solid fa-star"></i>
                                         </span>
                                     </div>
                                 </article>
                             </a>
-                            <!-- Site Main Content - OFFERS--LINK -->
+                            <!-- Site Main Content - OFFERS LINK -->
                             <a href="#" class="offers--link">
-                                <!-- Site Main Content - OFFERS--CARDS -->
+                                <!-- Site Main Content - OFFERS CARDS -->
                                 <article class="offers-card">
-                                    <!-- Site Main Content - OFFERS--CARD-PIC -->
+                                    <!-- Site Main Content - OFFERS CARD PIC -->
                                     <img class="card-pic" src="images/hebergements/nicate-lee.jpg"
                                         title="Auberge Le Panier"
                                         alt="Chambre avec lits superposés en bois décoratif, offrant 4 places, avec des rideaux pour plus de discrétion">
-                                        <!-- Site Main Content - OFFERS--CARD-INFO -->
+                                    <!-- Site Main Content - OFFERS CARD INFO -->
                                     <div class="card-info">
-                                        <!-- Site Main Content - OFFERS--CARD-TITLE -->
+                                        <!-- Site Main Content - OFFERS CARD TITLE -->
                                         <h3 class="card-title">Auberge Le Panier </h3>
-                                        <!-- Site Main Content - OFFERS--CARD-PRICE -->
+                                        <!-- Site Main Content - OFFERS CARD PRICE -->
                                         <span class="card-price">Nuit à partir de <strong>23&euro;</strong></span>
-                                        <!-- Site Main Content - OFFERS--CARD-ICONS -->
+                                        <!-- Site Main Content - OFFERS CARD ICONS -->
                                         <span class="card-icons">
                                             <i class="fa-solid fa-star"></i>
                                         </span>
@@ -267,7 +267,7 @@
                         <div class="offers--headline">
                             <span class="offers--more">Afficher plus</span>
                         </div>
-                    </section> <!-- END .offers--group -->
+                    </section> <!-- END OFFER GROUP -->
                 </div>
 
                 <!--  Site Main Content - SPONSORED  -->
@@ -317,24 +317,24 @@
                                     </div>
                                 </article>
                             </a>
+                            <a href="#" class="col-card--link">
+                                <article class="col-article">
+                                    <img class="col-pic" src="images/hebergements/reisetopia.jpg"
+                                        title="Hôtel Bleu et Blanc"
+                                        alt="Chambre avec un lit double, une tablette et des appliques murales, ainsi qu'un placard aux portes coulissantes habillées de miroirs">
 
-                            <article class="col-article">
-                                <img class="col-pic" src="images/hebergements/reisetopia.jpg"
-                                    title="Hôtel Bleu et Blanc"
-                                    alt="Chambre avec un lit double, une tablette et des appliques murales, ainsi qu'un placard aux portes coulissantes habillées de miroirs">
-
-                                <div class="col-card--info">
-                                    <h3 class="card-title">Hôtel Bleu et Blanc<br>
-                                        <span class="card-price">Nuit à partir de <strong>68&euro;</strong></span>
-                                    </h3>
-                                    <span class="col-card--icon">
-                                        <i class="fa-solid fa-star"></i>
-                                    </span>
-                                </div>
-                            </article>
+                                    <div class="col-card--info">
+                                        <h3 class="card-title">Hôtel Bleu et Blanc<br>
+                                            <span class="card-price">Nuit à partir de <strong>68&euro;</strong></span>
+                                        </h3>
+                                        <span class="col-card--icon">
+                                            <i class="fa-solid fa-star"></i>
+                                        </span>
+                                    </div>
+                                </article>
                             </a>
                         </div>
-                    </section> <!-- END .sponsored--group -->
+                    </section> <!-- END SPONSORED GROUP -->
                 </div>
             </div>
             <div class="site-content--all-activity">
@@ -402,7 +402,7 @@
                                 </article>
                             </a>
                         </div>
-                    </section> <!-- END .activity--group -->
+                    </section> <!-- END ACTIVITY GROUP-->
                 </div>
             </div>
             <!-- ************************************************************** -->
