--- a/index.html
+++ b/index.html
@@ -282,18 +282,23 @@
                             <span><i class="fa-solid fa-chart-line"></i></span>
                         </div>
 
-                        <!--  Site Main Content - SPONSORED-CARDS  -->
+                        <!--  Site Main Content - SPONSORED-CARDS -->
                         <div class="sponsored--cards">
                             <a href="#" class="col-card--link">
+                                <!--  Site Main Content - COL ARTICLE -->
                                 <article class="col-article">
+                                    <!--  Site Main Content - COL PIC -->
                                     <img class="col-pic" src="images/hebergements/emile-guillemot.jpg"
                                         title="Hôtel Le soleil du matin"
                                         alt="Chambre avec lit drapé de blanc, miroir mural et de plafond, dominée par des tons verts apaisants">
-
+                                    <!--  Site Main Content - COL CARD INFO -->
                                     <div class="col-card--info">
+                                        <!--  Site Main Content - CARD TITLE -->
                                         <h3 class="card-title">Hôtel Le soleil du matin<br>
+                                            <!--  Site Main Content - CARD PRICE -->
                                             <span class="card-price">Nuit à partir de <strong>25&euro;</strong></span>
                                         </h3>
+                                        <!--  Site Main Content - CARD ICON -->
                                         <span class="col-card--icon">
                                             <i class="fa-solid fa-star"></i>
                                         </span>
@@ -302,15 +307,20 @@
                             </a>
 
                             <a href="#" class="col-card--link">
+                                <!--  Site Main Content - COL ARTICLE -->
                                 <article class="col-article">
+                                    <!--  Site Main Content - COL PIC -->
                                     <img class="col-pic" src="images/hebergements/aw-creative.jpg"
                                         title="Chambres d'hôtes Au coeur de l'eau"
                                         alt="Chambre contemporaine au style industriel, dans des tons gris, avec lit beige et draps blancs">
-
+                                    <!--  Site Main Content - COL CARD INFO -->
                                     <div class="col-card--info">
+                                        <!--  Site Main Content - CARD TITLE -->
                                         <h3 class="card-title">Chambres d'hôtes Au coeur de l'eau<br>
+                                            <!--  Site Main Content - CARD PRICE -->
                                             <span class="card-price">Nuit à partir de <strong>71&euro;</strong></span>
                                         </h3>
+                                        <!--  Site Main Content - CARD ICON -->
                                         <span class="col-card--icon">
                                             <i class="fa-solid fa-star"></i>
                                         </span>
@@ -318,15 +328,20 @@
                                 </article>
                             </a>
                             <a href="#" class="col-card--link">
+                                <!--  Site Main Content - COL ARTICLE -->
                                 <article class="col-article">
+                                    <!--  Site Main Content - COL PIC -->
                                     <img class="col-pic" src="images/hebergements/reisetopia.jpg"
                                         title="Hôtel Bleu et Blanc"
                                         alt="Chambre avec un lit double, une tablette et des appliques murales, ainsi qu'un placard aux portes coulissantes habillées de miroirs">
-
+                                    <!--  Site Main Content - COL CARD INFO -->
                                     <div class="col-card--info">
+                                        <!--  Site Main Content - CARD TITLE -->
                                         <h3 class="card-title">Hôtel Bleu et Blanc<br>
+                                            <!--  Site Main Content - CARD PRICE -->
                                             <span class="card-price">Nuit à partir de <strong>68&euro;</strong></span>
                                         </h3>
+                                        <!--  Site Main Content - CARD ICON -->
                                         <span class="col-card--icon">
                                             <i class="fa-solid fa-star"></i>
                                         </span>
@@ -352,10 +367,11 @@
                         <div class="activity--cards">
                             <a class="activity-card--link" href="#">
                                 <article class="activity-card">
-
+                                    <!--  Site Main Content - ACTIVITY PIC  -->
                                     <img class="activity-pic" src="images/activites/reno-laithienne.jpg"
                                         title="Le vieux Port"
                                         alt="Bâteau amarrés avec ou sans mât, les voiles pliées, dans le Vieux-Port">
+                                    <!--  Site Main Content - ACTIVITY CARD INFO  -->
                                     <div class="activity-card-info">
                                         <h3 class="activity-card-title">Vieux-Port</h3>
                                     </div>
@@ -365,10 +381,11 @@
 
                             <a class="activity-card--link" href="#">
                                 <article class="activity-card">
-
+                                    <!--  Site Main Content - ACTIVITY PIC  -->
                                     <img class="activity-pic" src="images/activites/paul-hermann.jpg"
                                         title="Fort de Pomègues"
                                         alt="Vue en contre-plongée du Fort de Pomègues qui domine l'horizon au sommet d'une colline rocheuse">
+                                    <!--  Site Main Content - ACTIVITY CARD INFO  -->
                                     <div class="activity-card-info">
                                         <h3 class="activity-card-title">Fort de Pomègues</h3>
                                     </div>
@@ -378,10 +395,11 @@
 
                             <a class="activity-card--link" href="#">
                                 <article class="activity-card">
-
+                                    <!--  Site Main Content - ACTIVITY PIC  -->
                                     <img class="activity-pic" src="images/activites/kilyan-sockalingum.jpg"
                                         title="Parc national des Calanques"
                                         alt="Vue aérienne des falaises et de la mer du Parc National des Calanques, où les falaises escarpées rencontrent les eaux bleues de la Méditerranée">
+                                    <!--  Site Main Content - ACTIVITY CARD INFO  -->
                                     <div class="activity-card-info">
                                         <h3 class="activity-card-title">Parc national des Calanques</h3>
                                     </div>
@@ -391,10 +409,11 @@
 
                             <a class="activity-card--link" href="#">
                                 <article class="activity-card">
-
+                                    <!--  Site Main Content - ACTIVITY PIC  -->
                                     <img class="activity-pic" src="images/activites/florian-wehde.jpg"
                                         title="Notre-Dame-de-la-Garde"
                                         alt="Vue contre-plongée avec Notre-Dame-de-la-Garde dominant la colline, au-dessus des toits en premier plan">
+                                    <!--  Site Main Content - ACTIVITY CARD INFO  -->
                                     <div class="activity-card-info">
                                         <h3 class="activity-card-title">Notre-Dame-de-la-Garde</h3>
                                     </div>
@@ -418,24 +437,30 @@
                 <!--  Site Footer - MENU  -->
                 <nav class="footer-menu">
 
-                    <!--  Site Footer - LIST  -->
+                    <!--  Site Footer - MENU LIST  -->
                     <div class="footer-menu--list">
+                        <!--  Site Footer - MENU TITLE  -->
                         <span class="footer-menu--title">A propos</span>
+                        <!--  Site Footer - MENU LINK  -->
                         <a class="footer-menu--link" href="#">Fontionnement du site</a>
                         <a class="footer-menu--link" href="#">Conditions générales</a>
                         <a class="footer-menu--link" href="#">Données et confidentialité</a>
                     </div>
 
-                    <!--  Site Footer - LIST  -->
+                    <!--  Site Footer - MENU LIST  -->
                     <div class="footer-menu--list">
+                        <!--  Site Footer - MENU TITLE  -->
                         <span class="footer-menu--title">Nos hébergements</span>
+                        <!--  Site Footer - MENU LINK  -->
                         <a class="footer-menu--link" href="#">Charte qualité</a>
                         <a class="footer-menu--link" href="#">Proposer votre hôtel</a>
                     </div>
 
-                    <!--  Site Footer - LIST  -->
+                    <!--  Site Footer - MENU LIST  -->
                     <div class="footer-menu--list">
+                        <!--  Site Footer - MENU TITLE  -->
                         <span class="footer-menu--title">Assistance</span>
+                        <!--  Site Footer - MENU LINK  -->
                         <a class="footer-menu--link" href="#">Centre d'aide</a>
                         <a class="footer-menu--link" href="#">Nous contacter</a>
                     </div>
