--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <!-- Site Header - SEARCH-BUTTON -->
                     <button class="site-header--button" type="submit">
-                        <span>Rechercher</span>
+                        <span class="site-header--search-text">Rechercher</span>
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </form>
