deleted h1 tag for logo img

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
         <header>
             <!-- Site Header - TOPBAR -->
             <div class="site-header--topbar">
-                <!-- Site Header - TOPBAR-TITLE -->
-                <h1 class="site-header--topbar-title">
-                    <!-- Site Header - TOPBAR-LOGO -->
-                    <img class="site-header--topbar-logo" src="./images/logo/Booki.png" alt="Booki">
-                    <span hidden>Booki</span>
-                </h1>
+                
+                <!-- Site Header - TOPBAR-LOGO -->
+                <img class="site-header--topbar-logo" src="./images/logo/Booki.png" alt="Booki">
+
                 <!-- Site Header - TOPBAR-MENU -->
                 <nav class="site-header--topbar-menu">
                     <!-- Site Header - TOPBAR-LINK -->
@@ -54,11 +52,11 @@
                     </div>
 
                     <label for="search" hidden>Recherche</label>
-                    <input type="search" id="search" name="search" placeholder="Rechercher une ville">
+                    <input type="search" id="search" name="search" placeholder="Marseille, France">
 
                     <!-- Site Header - SEARCH-BUTTON -->
                     <button class="site-header--button" type="submit">
-                        <span class="site-header--search-text">Rechercher</span>
+                        <span>Rechercher</span>
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </form>
