replaced <span> with <h1> for site headline

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <!-- Site Header - SEARCH-GROUP -->
             <div class="site-header--search-group">
                 <!-- Site Header - SEARCH-HEADLINE -->
-                <div class="site-header--search-headline">
+                <div class="site-header--headline">
                     <!-- Site Header - SEARCH-TITLE -->
-                    <span class="site-header--search-title">Trouver votre hébergement pour des vacances de
-                        rêve</span><br>
+                    <h1 class="site-header--headline-title">Trouver votre hébergement pour des vacances de
+                        rêve</h1><br>
                     <span class="site-header--text-info">En plein centre ville ou en pleine nature</span>
                 </div>
 
